@startuml

title __MKV_BUILD's Class Diagram__\n


      class com.example.mkv_build.HelloApplication {
      }

  


      class com.example.mkv_build.HelloController {
      }

  


      namespace model {
        interface com.example.mkv_build.model.Builder {
        }
      }



      namespace model {
        class com.example.mkv_build.model.ConcreteBuilder {
        }
      }

  


      namespace model {
        class com.example.mkv_build.model.Director {
        }
      }

  

      namespace model {
        class com.example.mkv_build.model.Indicator {
        }
      }

  

  com.example.mkv_build.HelloApplication -up-|> javafx.application.Application
  com.example.mkv_build.HelloController o-- com.example.mkv_build.model.ConcreteBuilder : builder
  com.example.mkv_build.HelloController o-- com.example.mkv_build.model.Director : director
  com.example.mkv_build.model.ConcreteBuilder .up.|> com.example.mkv_build.model.Builder
  com.example.mkv_build.model.ConcreteBuilder o-- com.example.mkv_build.model.Indicator : indicator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
